@@ -57,6 +57,8 @@ public:
     QVariant headerData(int section, Qt::Orientation orientation, int role)                         const override;
     Qt::ItemFlags flags(const QModelIndex& index)                                                   const override;
 
+    TrackManager::Track getTrackForIndex(const QModelIndex& index)                                  const;
+
 private Q_SLOTS:
 
     void slotTrackManagerUpdated();
