@@ -262,4 +262,5 @@ BUGFIXES:
 242 ==> 431117 - Selected GPX File Colour Is Grayed Out When Selected.
 243 ==> 431070 - Filetype .wmf can't be displayed.
 244 ==> 431081 - Exif data is completely lost for some pictures after detect faces / recognize faces.
-245 ==> 
+245 ==> 431119 - Move Map To First Point In Selected GPX Track.
+246 ==> 
